# Rust-Exercism

./: LICENSE.md  README.md
allergies/.exercism/: metadata.json
allergies/src/: lib.rs
assembly-line/.exercism/: metadata.json
assembly-line/src/: lib.rs
bowling/.exercism/: metadata.json
bowling/src/: lib.rs
clock/.exercism/: metadata.json
clock/src/: lib.rs
dot-dsl/.exercism/: metadata.json
dot-dsl/src/: lib.rs
dot-dsl/tests/: dot-dsl.rs
health-statistics/.exercism/: metadata.json
hello-world/.exercism/: metadata.json
lucians-luscious-lasagna/.exercism/: metadata.json
poker/.exercism/: metadata.json
poker/src/: lib.rs
rectangles/.exercism/: metadata.json
rectangles/src/: lib.rs
robot-simulator/.exercism/: metadata.json
robot-simulator/src/: lib.rs
scale-generator/: README.md
scale-generator/.exercism/: metadata.json
scale-generator/src/: lib.rs
semi-structured-logs/.exercism/: metadata.json
semi-structured-logs/src/: lib.rs
simple-linked-list/.exercism/: metadata.json
simple-linked-list/src/: lib.rs
sublist/: Cargo.toml  README.md
sublist/.exercism/: metadata.json
sublist/benches/: README.md  flamegraphs.html  is_superlist_rayon.rs  large_input.txt  sublist.rs
sublist/src/: lib.rs
sublist/tests/: sublist.rs
tournament/.exercism/: metadata.json
tournament/src/: lib.rs
